Dark mode fixes, extra query fixes

--- a/resources/css/ckeditor.css
+++ b/resources/css/ckeditor.css
@@ -1,17 +1,20 @@
 .ck-editor {
+    h2,h3,h4,h5,h6 {
+        line-height: 150% !important;
+        margin: 20px 0 10px !important;
+    }
     h2 {
         font-size: 25px !important;
-        line-height: 110% !important;
     }
-
     h3 {
         font-size: 22px !important;
-        line-height: 110% !important;
     }
-
     h4 {
         font-size: 20px !important;
-        line-height: 110% !important;
+    }
+    p {
+        line-height: 160% !important;
+        text-align: left !important;
     }
 }
 
